# ChangeLog for net-p2p/NativeThread
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  29 Jul 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  NativeThread-20080330.ebuild:
  Add java eclass

  20 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  NativeThread-20080330.ebuild:
  Add blocker for previous location

  20 Apr 2008; Thomas Sachau (Tommy[D]) <tommy@gentoo.org>
  NativeThread-20080330.ebuild:
  Add RDEPEND

  30 Mar 2008; Thomas Sachau (Tommy[D]) tommy@gentoo.org
  files/Makefile.patch:
  Update patch

  30 Mar 2008; Thomas Sachau (Tommy[D]) tommy@gentoo.org
  -NativeThread-20080303.ebuild, +NativeThread-20080330.ebuild:
  Version bump, added amd64 keyword

  03 Mar 2008; (Tommy[D]) tommy100@gmx.de -NativeThread-20080224.ebuild,
  +NativeThread-20080303.ebuild, files/Makefile.patch:
  Some changes advised by commander jakub ;)

  26 Feb 2008; (Tommy[D]) tommy100@gmx.de +NativeThread-20080224.ebuild,
  +files/Makefile.patch, +metadata.xml:
  New lib for net-p2p/freenet (bug #128783), moved out of freenet to compile
  native one
