@@ -1,5 +1,5 @@
 AUX Makefile.patch 759 RMD160 f3a2fc7c3bf6ed178015e85311bd50d84fa0061d SHA1 797a5c7cbc219b1b6147ef578ed48fe66ee2f873 SHA256 3974e6419e2023f6a48fbaf79be80c6fa9ea42b7db2008980497c4814c2b5108
 DIST NativeThread-20080330.tar.bz2 2707 RMD160 6b93881f53a2ed89096d4a1900c3b48e08cb0201 SHA1 ca68ea04fcb1d9fd9f8aaed34a3e92a1de6539d9 SHA256 ae5277c25420fc76f59d296400c20562e37ff0ad4ecab63e537b9a053ac5802c
-EBUILD NativeThread-20080330.ebuild 686 RMD160 038607b3914c2fc07d8e3c9af575c0f4b52529f4 SHA1 ecc4088e633f1d61edd917b23cd8a0297eae46ec SHA256 b10e2b05fb982474aeab5060127a044fabd610b8df095a5130510ea3d3acade3
-MISC ChangeLog 1098 RMD160 20193691ff26176181e27360fc80607120c2b017 SHA1 08e0f9d70f3e75e2628c25b3df31006daf04e83a SHA256 455d283fe3f5d720d57da3a6f51c462d995877c4560bd684bbfd8965062bd226
+EBUILD NativeThread-20080330-r1.ebuild 654 RMD160 b9acf39ea944451b4b085c6540fb3fcd81b867c0 SHA1 595fe9062f1b2654436f7a973ed1912754982083 SHA256 8cc7de773ee4c65dffdd717d9d89efe97d3ebfaa9d05e93ad444fba2fa282886
+MISC ChangeLog 1261 RMD160 7dbedfb4ad12d5059bd35145f60c5f711b4fa8c5 SHA1 77800274989dcf3659897f5234de408eddffb63f SHA256 62a7702d17cdd0e4ce7159deaff19ad25afd05ef241ac9679acc6b2cbb2b6dbc
 MISC metadata.xml 170 RMD160 645927a396fdc21cdeb089fe42c5397332420ea6 SHA1 ac7f48a14fec325926f9ce1be8fbf1f311b4f2e4 SHA256 d797a2ec6f9dc516c9f9c1a758ee87ad3e8c43101b5dc76c2f872d5bd4639b42
